Fix main screen when element is not visible

--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -14,6 +14,10 @@
 }
 
 /* main */
+.main-screen__find {
+  margin-bottom: 72px;
+}
+
 .recommend-friends {
   padding: 16px 0;
   border-top: var(--main-border);
