--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -14,6 +14,9 @@
 }
 
 /* main */
+.main-screen__more {
+  margin-bottom: 96px;
+}
 .more__comment i {
   font-size: 28px;
   color: black;
