--- a/css/styles.css
+++ b/css/styles.css
@@ -31,5 +31,4 @@ body {
 
 .main-screen {
   padding: 0px var(--horizontal-space);
-  margin-bottom: 72px;
 }
